# config_manager

./: .cursorrules  .gitignore  2025-07-19-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  README-大小写冲突-tony_Win10.md  README.md  README_多进程支持.md  collect.py  config_manager.code-workspace  config_multiprocess_demo.py  debug_test.py  error.txt  pyproject.toml  pytest.ini  readme - config_manager.md  readme _config_manager.md  readme.md  setup.py  simple_test.py  temp.py  test_debug.py  test_fix.py  test_logger.py  test_logger_direct.py  test_simple.py  test_simple_logger.py  tsb_path_verification_report.md  validation_report.md  路径配置修复总结.md
.claude/: settings.local.json
docs/: test_error.txt
examples/: tsb_logs_dir_example.py
temp/: all_test_output.txt  all_test_output2.txt  comprehensive_isolation_test.py  config_serialization_demo.py  debug_call_chain.py  debug_call_chain_timing.py  debug_full_manager.py  debug_initialize_call_chain.py  debug_load_issue.py  debug_manager_call_chain.py  debug_manager_call_chain_issue.py  debug_manager_init.py  debug_pytest_call_stack.py  debug_reload.py  debug_save_issue.py  demo_config.yaml  mp_demo.yaml  test_backup_fix.py  test_config.yaml  test_config2.yaml  test_duplicate_loading.py  test_first_start_time_no_save.py  test_minimal_logger.py  test_mode_isolation_check.py  test_mode_isolation_test.py  test_my_project_scenario.py  test_no_data_display.py  test_original_problem.py  thread_2_config.yaml
tests/: __init__.py  conftest.py  example_multiprocessing_usage.py  test_config_multiprocessing_complete.py  test_cross_project_isolation.py  test_duplicate_save_fix.py  test_error.txt  test_file_watcher_debug.py  test_file_watcher_verbose.py  test_multiprocessing_modes.py  test_multiprocessing_pickle.py  (+6 more)
(+414 files in other folders)
